fix: Fixing scrollbar issues on desktop

--- a/handbook/styles/general.css
+++ b/handbook/styles/general.css
@@ -142,6 +142,6 @@ mark {
 
 @media (min-width: 48rem) {
     #handbook-files {
-        max-height: calc(100vh - 37.5rem);
+        max-height: calc(100vh - 38.25rem);
     }
 }
